log
mi., 16 de mar. de 2022 23:45:33: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
800a208
ju., 17 de mar. de 2022  0:02:09: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
428673b
ju., 17 de mar. de 2022  0:06:40: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
75f11ec
ju., 17 de mar. de 2022  0:13:25: 
 list.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  0|0
06ff7d6
ju., 17 de mar. de 2022 21:42:20: 
 list.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
96d4f5b
vi., 18 de mar. de 2022 20:32:26: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:84:5: error: unknown type name 'node'
     node* m=createNode(data);
     ^~~~
list.c:84:13: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     node* m=createNode(data);
             ^~~~~~~~~~
list.c:86:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         list->head=m;
                   ^
list.c:89:13: error: 'List {aka struct List}' has no member named 'last'
         list->last->next;
             ^~
list.c:91:9: error: 'List {aka struct List}' has no member named 'last'
     list->last=m;
         ^~
cc1.exe: all warnings being treated as errors
Compilation failed
55e2463
vi., 18 de mar. de 2022 20:40:22: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:84:5: error: unknown type name 'node'
     node* m=createNode(data);
     ^~~~
list.c:84:13: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     node* m=createNode(data);
             ^~~~~~~~~~
list.c:86:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         list->head=m;
                   ^
list.c:89:19: error: statement with no effect [-Werror=unused-value]
         list->head->next;
         ~~~~~~~~~~^~~~~~
list.c:91:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     list->head=m;
               ^
cc1.exe: all warnings being treated as errors
Compilation failed
8a51299
sá., 19 de mar. de 2022 19:13:50: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
0fd6b2d
sá., 19 de mar. de 2022 19:16:13: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
07166b3
sá., 19 de mar. de 2022 19:17:15: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
1f87504
sá., 19 de mar. de 2022 19:20:54: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
4528ec7
sá., 19 de mar. de 2022 19:21:35: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
6bc29cc
sá., 19 de mar. de 2022 19:24:21: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
39844db
sá., 19 de mar. de 2022 19:32:11: 
 list.c | 10 ++--------
 1 file changed, 2 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:85:12: error: 'List {aka struct List}' has no member named 'thead'; did you mean 'head'?
     if(list->thead==NULL){
            ^~
Compilation failed
1919639
sá., 19 de mar. de 2022 19:32:27: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
15e062c
sá., 19 de mar. de 2022 19:33:11: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
5355974
sá., 19 de mar. de 2022 19:35:46: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7bde0d8
sá., 19 de mar. de 2022 22:12:48: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
6e686c2
sá., 19 de mar. de 2022 22:13:45: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:92:15: error: statement with no effect [-Werror=unused-value]
     list->head->next;
     ~~~~~~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6dfe5d4
sá., 19 de mar. de 2022 22:44:54: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
411c05e
do., 20 de mar. de 2022 14:10:52: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:91:25: error: 'current' undeclared (first use in this function)
     list->current->next=current->next;
                         ^~~~~~~
list.c:91:25: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
bce6b58
do., 20 de mar. de 2022 14:13:04: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
75fca68
do., 20 de mar. de 2022 14:13:50: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
59b7049
do., 20 de mar. de 2022 14:18:46: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
f5f1fea
do., 20 de mar. de 2022 14:19:49: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  9|3
total_score: 35/70
1f578c4
do., 20 de mar. de 2022 14:21:18: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
9f3f9c4
do., 20 de mar. de 2022 14:56:27: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  10|2
total_score: 45/70
f6d3cac
do., 20 de mar. de 2022 15:02:03: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
fbf20e9
do., 20 de mar. de 2022 15:02:47: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
5a725af
do., 20 de mar. de 2022 15:04:53: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
70c1e88
do., 20 de mar. de 2022 15:08:36: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  10|2
total_score: 45/70
297edba
